# Media2

./: .gitignore  .tmtags  HistoryAdd.hs  Makefile  Media.cabal  Media.hs  Nums.hs  Numsf.hs  Numss.hs  README  main.hs  media'.tmproj  media.hs  media.sql  tags
extra/: media_get_num.rb
scripts/: media_completion.sh
scripts/other/: delete_incomplete.rb  delete_to_delete.rb  find_all_missing_ids.rb  find_missing_scores.rb  find_title_and_id.rb
src/: AddEpisodeToHistory.hs  CheckForNewEpisodes.hs  HistoryAdd.hs  MediaAllMain.hs  MediaMain.hs  Nums.hs  Numsf.hs  Numss.hs  OrganiseMedia.hs  OutputData.hs  PlayNextEpisode.hs  Playlist.hs  TermSize.hs  TermSize.hsc  Terminal.hs
src/Media/: .tmtags  Args.hs  History.hs  IO.hs  Info.hs  Misc.hs  NextEpisode.hs  Player.hs  Time.hs  Types.hs
test/Media/: TimeSpec.hs
