name:                Media
version:             0.2.0.0
synopsis:            Video files classifier and player
description:         Classifies videos files based on series and episode number and records which videos have been played in an sqlite3 database
homepage:            https://github.com/Bilalh
license:             Apache-2.0
license-file:        LICENSE
author:              Bilal Syed Hussain
maintainer:          bhterra@gmail.com
 --copyright:
category:            System
build-type:          Simple
cabal-version:       >=1.8


test-suite spec
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: src, test
  build-depends:  base, hspec, HUnit
                  ,process
                  ,shell-escape
                  ,bytestring
                  ,ansi-terminal
                  ,containers
                  ,filepath
                  ,directory
                  ,HDBC >=2.3
                  ,HDBC-sqlite3 >=2.3
                  ,time
                  ,old-locale
                  ,bytestring
                  ,parsec


executable media2
  main-is:            MediaAllMain.hs
  hs-source-dirs:     src
  other-modules:
  build-depends:      base     == 4.6.*
                     ,process
                     ,shell-escape
                     ,bytestring
                     ,ansi-terminal
                     ,containers
                     ,filepath
                     ,directory
                     ,HDBC >=2.3
                     ,HDBC-sqlite3 >=2.3
                     ,time
                     ,cmdargs


executable hista
   main-is:            HistoryAdd.hs
   hs-source-dirs:    src
   -- other-modules:
   build-depends:      base     == 4.6.*
                      ,HDBC >=2.3
                      ,HDBC-sqlite3 >=2.3
                      ,containers
                      ,time
                      ,split
                      ,old-locale
                      ,parsec
                      ,bytestring
                      ,shell-escape
                      ,ansi-terminal
                      ,filepath
                      ,directory
                      ,process

executable  nums
   main-is:            Nums.hs
   hs-source-dirs:    src
   -- other-modules:
   build-depends:      base     == 4.6.*
                      ,HDBC >=2.3
                      ,HDBC-sqlite3 >=2.3
                      ,time
                      ,old-locale
                      ,ansi-terminal
                      ,containers
                      ,shell-escape
                      ,bytestring

executable  numsf
   main-is:            Numsf.hs
   hs-source-dirs:    src
   -- other-modules:
   build-depends:      base     == 4.6.*
                      ,HDBC >=2.3
                      ,HDBC-sqlite3 >=2.3
                      ,time
                      ,old-locale
                      ,ansi-terminal
                      ,containers
                      ,shell-escape
                      ,bytestring

executable  numss
   main-is:            Numss.hs
   hs-source-dirs:    src
   -- other-modules:
   build-depends:      base     == 4.6.*
                      ,HDBC >=2.3
                      ,HDBC-sqlite3 >=2.3
                      ,time
                      ,old-locale
                      ,ansi-terminal
                      ,containers
                      ,shell-escape
                      ,bytestring
